<resources>
    <string name="app_name">Music App Android</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorites_btn">Favorites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_song">Total Songs</string>
    <string name="music_player">Music Player</string>
    <string name="favorite_empty_btn">Empty Favorite</string>
    <string name="back_btn">Back</string>
    <string name="song_name">Song Name</string>
    <string name="start">00:00</string>
    <string name="end">Playing</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="name_login">Name Login</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="nome_de_usuario">Nome de Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="registre_se">Não possui uma conta ainda? Registre-se aqui.</string>
    <string name="registrar">Registrar</string>
    <string name="confirme_a_senha">Confirme a senha</string>
</resources>