<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayerActivity"
    android:orientation="vertical"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/back_icon"
            android:contentDescription="@string/back_btn"
            app:tint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/music_player"
            android:textSize="20sp"
            android:tint="@color/black"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:contentDescription="@string/music_player" />

        <ImageButton
            android:id="@+id/favoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/favorite_empty_btn"
            android:src="@drawable/favorite_empty_icon"
            app:tint="@android:color/holo_red_dark"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
    
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImg"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="18dp"
        app:strokeWidth="5dp"
        android:src="@drawable/music_player_icon_slash_screen" />
    <TextView
        android:id="@+id/songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:layout_weight="1"
        android:gravity="center" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_steel_blue"
            app:icon="@drawable/previous_icon"
            app:iconSize="40dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_steel_blue"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_steel_blue"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/start"
            android:gravity="center"/>
        
        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressTint="@color/light_steel_blue"
            android:thumbTint="@color/steel_blue"
            tools:ignore="NestedWeights"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/end"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>